--- a/autres.html
+++ b/autres.html
@@ -36,7 +36,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 2-->
+    <!--Autres 2
     <figure>
       <a href="https://www.amazon.fr/SPORTS-Standard-PS5-Vid%C3%A9o-Fran%C3%A7ais/dp/B0F24Y88V1?pd_rd_w=TCcBd&content-id=amzn1.sym.cbacdd79-a2a7-4dad-8c44-4a36464a6b2a%3Aamzn1.symc.ca948091-a64d-450e-86d7-c161ca33337b&pf_rd_p=cbacdd79-a2a7-4dad-8c44-4a36464a6b2a&pf_rd_r=BRHCTZRNC3QYSTF9KBNR&pd_rd_wg=0oaDq&pd_rd_r=6c8c7c4f-622f-4df0-9d3e-b327f906e710&pd_rd_i=B0F24Y88V1&th=1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/81Ck5Ckkh+L._AC_SL1500_.jpg" alt="Tumblr Gotaga" class="others" /></a>
@@ -46,7 +46,7 @@
       <figcaption>
         62,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 3-->
     <figure>
@@ -63,25 +63,25 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4-->
+    <!--Autres 4
     <figure>
       <a href="#"
         target="_blank"> <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTtTa8mcQFDN902oovsXkRLuL3mWpYPQ1HK9eAx0hvgyvs-ZG3m-oRV51lU8fWQpG0Mq6NKhTrLMkZ4-2YBOF7AODrG4UqtVfZZ8SkluVOc422etKbK7tPH" alt="Bungee" class="others" /></a>
       <figcaption>
         One Million by Paco Rabanne
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="#" target="_blank"> <img
           src="https://static.beautytocare.com/media/catalog/product/p/a/paco-rabanne-invictus-eau-de-toilette-200ml_1.jpg" alt="Récipient à Mate" class="others" /></a>
       <figcaption>
         Invictus by Paco Rabanne
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 2
     <figure>
