--- a/religion.html
+++ b/religion.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="gamesLine">
-    <!--Jeu 1--->
+    <!--Jeu 1
     <figure>
       <a href="https://www.amazon.fr/Rosaire-selon-Jean-Paul-Avec-myst%C3%A8res/dp/8820974460/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2T6NKQI3IDMK7&dib=eyJ2IjoiMSJ9.WPltdL0t6qxuor0EuNxELh_RAV-3df2c_aS9FXpSofWqGI1dr0v9DOchwQxL9YjjhYGVKOB55Dl7soPknOAPcQHXUtEDHa59eH74uvV1i3QRBdCXZrmwzELW9pzmUeRHeeVglj_tp-5xPYpl8Y8ef-umx7sXdb5u7j9g3Qa5PI4KaGsnFfbwIXAs1KrKA3Nu8ia_1loRFIjoI_cXZpBwHI9NJsvKrDQRU5kEwACVn9XHLkxLgCb0zqQNO5XakToN_dfMtmrQ7e0lHw7ZVeo3wYcoA3WmoqZBywyIRMjb80g.3FTtijFLqu8ekyLuG5_gljStyWa8i16AJsDpxANhoww&dib_tag=se&keywords=jean+paul+II+rosaire&qid=1728308492&sprefix=jean+paul+ii+rosaire%2Caps%2C84&sr=8-3"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/51NXteD1LtL.jpg" alt="Le Rosaire" class="books" /></a>
@@ -34,7 +34,7 @@
       <figcaption>
         3,00€
       </figcaption>
-    </figure>
+    </figure>--->
 
     <!--Jeu 2--->
     <figure>
@@ -148,7 +148,7 @@
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 1--->
+    <!--Jeu 1
     <figure>
       <a href="https://www.amazon.fr/foi-nest-pas-bonbon-miel/dp/2728926964/ref=sr_1_2?crid=R0CKEG8RFMW5&dib=eyJ2IjoiMSJ9.TTIc16jh6Ej9snk-rb1ARmnvok5LOEur_g0rcSvHoMblBDtqtVtGOKP3OpXp8VKPTWTCWyyRvbNJ9DjUFcb4BPwU7J6P5GnaP2j-TKv08TmRu8Xutp1h4asf5zNoOc4cSnb9QCKBpyYRIZr8TnurkB0xFSZG0tsAmJSpY2z4czYYXz5ol6iadF0LA6FrGC72r9JbgyUcH83HgoYnqYvuRuJqRJbfvc6Fqd-aKr-pPtQkZeYIQt2YnXSUB-mZYmxBC767-Q7KKHofCuqmZyYUXZGnF8SpQBqq0pO5tazi_3tg1Sv-NdYbENKiAvsphcP-Md-zHNY2dPX_ZTjcMZP0rAgePGcuUx4u8JWM_VaKVXft3Fhp9zbgZYUeYKhrN5y07ib6BP7BLwIUwGoBORrSloMlJIVDeNtBJlhoF__zh-QQ1LI5B0Hnmzv-iVRc2COy.4tq4MKXE4f9b7ttjTa7MZxHcdr6ytVIceJCjLXnum9g&dib_tag=se&keywords=luigi+maria+epicoco&nsdOptOutParam=true&qid=1736339816&sprefix=luigi+maria+e%2Caps%2C119&sr=8-2"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81WEM54cCeL._SL1500_.jpg" alt="La foi n'est pas un bonbon au miel" class="books" /></a>
@@ -164,7 +164,7 @@
       <figcaption>
         14,90€
       </figcaption>
-    </figure>
+    </figure>--->
 
     <!--Jeu 2--->
     <figure>
@@ -343,7 +343,7 @@
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 1--->
+    <!--Jeu 1
     <figure>
       <a href="https://www.amazon.fr/profondeurs-nos-coeurs-Beno%C3%AEt-XVI/dp/2213716943/257-0312289-7580746?pd_rd_w=bobRf&content-id=amzn1.sym.f4202548-28b9-4238-addd-1e87d5d2f948:amzn1.symc.15cbde64-36a4-47c6-b315-5d1a0d7227bc&pf_rd_p=f4202548-28b9-4238-addd-1e87d5d2f948&pf_rd_r=Z1DQ4ZCD0YHC43RPX68J&pd_rd_wg=aehac&pd_rd_r=ec578505-a975-4ac1-86c6-33b776a8fc34&pd_rd_i=2213716943&psc=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/71AyBc9ei2L._SL1500_.jpg" alt="Des profondeurs de nos coeurs" class="books" /></a>
@@ -356,7 +356,7 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>--->
 
     <!--Jeu 2--->
     <figure>
