--- a/livres.html
+++ b/livres.html
@@ -1190,7 +1190,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 73-->
+    <!--Livre 73
     <figure>
       <a href="https://www.amazon.fr/absents-levez-doigt-Pierre-Benichou/dp/2246812666/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=pierre+benichou&qid=1585677816&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/81B4o3QKP5L.jpg" alt="Les absents, levez le doigt !" class="books" /></a>
@@ -1203,7 +1203,7 @@
       <figcaption>
         15,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 74-->
     <figure>
