--- a/autres.html
+++ b/autres.html
@@ -48,7 +48,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 3-->
+    <!--Autres 3
     <figure>
       <a href="https://www.decathlon.be/fr/p/mp/thor-athletics/sangles-de-levage-sangle-de-tirage-musculation-grip-supplementaire-camel/_/R-p-a3e93c99-2cb4-47a3-bb26-181453d1f759?mc=a3e93c99-2cb4-47a3-bb26-181453d1f759_c1c4&c=noir_blanc"
         target="_blank"> <img src="https://contents.mediadecathlon.com/m16316325/k$1fa7c58195bd6af8b743bceb3f315831/sq/sangles-de-levage-sangle-de-tirage-musculation-grip-supplementaire-noir.jpg?format=auto&f=1200x1200" alt="Gotaga" class="others" /></a>
@@ -61,7 +61,7 @@
       <figcaption>
         17,95€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 4
     <figure>
