--- a/livres.html
+++ b/livres.html
@@ -164,7 +164,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 10-->
+    <!--Livre 10
     <figure>
       <a href="https://www.amazon.fr/Itin%C3%A9raire-dun-avocat-hors-norme/dp/2755678127/ref=tmm_mmp_swatch_0?_encoding=UTF8&sr="
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81AZ05xRcsL._SL1500_.jpg" alt="Itinéraire d'un avocat" class="books" /></a>
@@ -180,7 +180,7 @@
       <figcaption>
         7,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 11-->
     <figure>
@@ -5835,7 +5835,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Giovanni-Falcone-Roberto-Saviano/dp/207300699X/ref=sr_1_1?crid=3SS33UKVVM1EU&dib=eyJ2IjoiMSJ9.sZrKLvxM94MB9i9zcjayDEuI__4zS7NZqQqqvMobwW2oJoz26QbICuBDYyG26UpxAor0CtGlogBRJrdijQKPECI_C_jj7MjE3C1xZp1d1NY.AYaDmfDVdoDQbq7vYgAxQobSabuPmJlolSfHsyvqPQ0&dib_tag=se&keywords=falcone+saviano&qid=1740586931&sprefix=falcone%2Caps%2C107&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71JkwKwDTYL._SL1211_.jpg" alt="Giovanni Falcone"
           class="books" /></a>
@@ -5848,7 +5848,7 @@
       <figcaption>
         25,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
