--- a/livres.html
+++ b/livres.html
@@ -7116,7 +7116,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/plus-grandes-affaires-lHeure-crime/dp/2386710017?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=CZVL76B9QFKC&dib=eyJ2IjoiMSJ9.36IUu0myxnSIEcSibsmg_OVE9YXlRC_PXt6jiyYCeGJMJ6zsj09ddopqTVmy5MP5q3ttUQwQe_tm7v1sP668uCYOpWCOUFmkc95IEfs8adyVJa-95grmO5cAr4oKJAzJl0fQOjWpAxvOKmo7GGJvK6GzDSIdzLisHNu_L5f4USE-b5OUZxea1XP12zLj5rOkkYqW50nbmu950OANr50slnGjFhpQBeXbS438SJ8zNrYysLOfT8VabubctgPAp4mpUiiZ3CEmhZR_cLgBwlKYmVTkDOUowG3OHtSGbIlDiEg.ZI0w-AyaZ_asr_l57ncZ3BN9yaEwaPdwCUFYaDw0yO4&dib_tag=se&keywords=l%27heure+du+crime&qid=1749890826&sprefix=l%27heure+du+crime%2Caps%2C94&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/71HWP5caFML._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
@@ -7132,7 +7132,7 @@
       <figcaption>
         20,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
