--- a/livres.html
+++ b/livres.html
@@ -7149,7 +7149,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/veuf-noir-Grand-Canyon/dp/2264085681?crid=UEHIECNKGSKU&dib=eyJ2IjoiMSJ9.biPyM77nWm6SnA2x604C-A.wBfidqMS2yW2cXOFTArinwLuPtT4AqeqXqpxcppQG6U&dib_tag=se&keywords=le+boeuf+noir+du+grand+canyon&qid=1749890539&sprefix=le+veuf+noir%2Caps%2C99&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/71IbRzaNbDL._SL1311_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
@@ -7162,7 +7162,7 @@
       <figcaption>
         8,30€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
