--- a/livres.html
+++ b/livres.html
@@ -5835,20 +5835,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Giovanni-Falcone-Roberto-Saviano/dp/207300699X/ref=sr_1_1?crid=3SS33UKVVM1EU&dib=eyJ2IjoiMSJ9.sZrKLvxM94MB9i9zcjayDEuI__4zS7NZqQqqvMobwW2oJoz26QbICuBDYyG26UpxAor0CtGlogBRJrdijQKPECI_C_jj7MjE3C1xZp1d1NY.AYaDmfDVdoDQbq7vYgAxQobSabuPmJlolSfHsyvqPQ0&dib_tag=se&keywords=falcone+saviano&qid=1740586931&sprefix=falcone%2Caps%2C107&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71JkwKwDTYL._SL1211_.jpg" alt="Giovanni Falcone"
+      <a href="https://www.amazon.fr/Je-voulais-vivre-Milady-vengent/dp/2246831660/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LP3W2AB24XW2&dib=eyJ2IjoiMSJ9.hPkxvfA4uYfZIjj1kv6Nb87ypOmB7Is__R-i5h8mPf0YWgy0M-EUBjK5ldq7RvkridwuWJkV9KHO9Vnb-DIzBGS8zHazm71vHpJJovCDLFPhdcclpI-3ia7KJgWSZBH7_pb1BYT_NOVJXJrqSr6TMuwbAyAB3Jrj9ju6f03Nc1C1ORChJBRRIcLd2fYRbDrBhw0d4Hn_BLGwwheaNBrTKA.4khHxu55SJ0gPnXbhlmBBOMyXbOkLcF_xq3y1EV_u4E&dib_tag=se&keywords=je+voulais+vivre&qid=1754668008&sprefix=je+voulais+vivr%2Caps%2C100&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71n03VNoZGL._SL1500_.jpg" alt="Giovanni Falcone"
           class="books" /></a>
       <figcaption>
-        Roberto Saviano
+        Adélaïde de Clermont-Tonnerre
       </figcaption>
       <figcaption>
-        Giovanni Falcone
+        Je voulais vivre
       </figcaption>
       <figcaption>
-        25,00€
+        24,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98-->
     <figure>
@@ -7116,23 +7116,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/plus-grandes-affaires-lHeure-crime/dp/2386710017?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=CZVL76B9QFKC&dib=eyJ2IjoiMSJ9.36IUu0myxnSIEcSibsmg_OVE9YXlRC_PXt6jiyYCeGJMJ6zsj09ddopqTVmy5MP5q3ttUQwQe_tm7v1sP668uCYOpWCOUFmkc95IEfs8adyVJa-95grmO5cAr4oKJAzJl0fQOjWpAxvOKmo7GGJvK6GzDSIdzLisHNu_L5f4USE-b5OUZxea1XP12zLj5rOkkYqW50nbmu950OANr50slnGjFhpQBeXbS438SJ8zNrYysLOfT8VabubctgPAp4mpUiiZ3CEmhZR_cLgBwlKYmVTkDOUowG3OHtSGbIlDiEg.ZI0w-AyaZ_asr_l57ncZ3BN9yaEwaPdwCUFYaDw0yO4&dib_tag=se&keywords=l%27heure+du+crime&qid=1749890826&sprefix=l%27heure+du+crime%2Caps%2C94&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/71HWP5caFML._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/J-Hoover-confidential-Anthony-Summers/dp/2358876127/ref=tmm_pap_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.lbppqk2YiMlg94C_vajRPwKlNDp3ozBdEnmFp3ADy0BUjN3jqEBw3mjz3XLGRujap6_QTPjpjPNIsuObrcKxvmNdC4tdsnPiIT4DgDMydk85YbKuM3H_9AIOpXhulhMO0d8tCUY15DYBibzXGDqXCg.8PL7tUw_Sv1EQaglN3z-u2Gp5wT-hixdw0-HoaDPe0I&qid=1754667866&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/41lE6Q40GaL.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        Jean-Alphonse Richard
+        Anthony Summers
       </figcaption>
       <figcaption>
-        Les plus grandes affaires
+        J.E. Hoover confidential
       </figcaption>
       <figcaption>
-        de l’Heure du crime
+        21,90€
       </figcaption>
-      <figcaption>
-        20,90€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98-->
     <figure>
@@ -7149,20 +7146,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/veuf-noir-Grand-Canyon/dp/2264085681?crid=UEHIECNKGSKU&dib=eyJ2IjoiMSJ9.biPyM77nWm6SnA2x604C-A.wBfidqMS2yW2cXOFTArinwLuPtT4AqeqXqpxcppQG6U&dib_tag=se&keywords=le+boeuf+noir+du+grand+canyon&qid=1749890539&sprefix=le+veuf+noir%2Caps%2C99&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/71IbRzaNbDL._SL1311_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/mort-cest-vie-Philippe-m%C3%A9decin/dp/2931300160/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LHU8MF0OSGCV&dib=eyJ2IjoiMSJ9.KOdx7wsr5bH2IQzQLBFTz2UJUOTa1ui4JGh-NNKxPfq8E3qIodQqUsPhBoJRDhtoHvmircZIA6fBSALSTbwEiBNZ5q61Avgt8Ek6GfFT2ub8YE5mrSASmlQ220kdBXnkXWmIRAyCHtYG1z9cCMBDY_2y8ch_aq-XzkwitKp8q9CsAttZyPPrc6R_xDyZm8D90KQ-1al9myJ8krx2aZaIiSG-9oARRs3nciFaUJ5bRdwFfv1l3CC_16KJvPI5bCPR6FmkoC48SOvUi-wwCytqAtfWBPiP-tcQ5FwQ9DWUN2w.E9lDKvVFHiWS21Dmknxfsc0S5oXxZcHbk6WgOvfToaQ&dib_tag=se&keywords=boxho&qid=1754667986&sprefix=boxho%2Caps%2C121&sr=8-3" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81gAegBoXkL._SL1500_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
       <figcaption>
-        Vincent Manilève
+        Philippe Boxho
       </figcaption>
       <figcaption>
-        Le veuf noir du Grand Canyon
+        La mort c'est ma vie
       </figcaption>
       <figcaption>
-        8,30€
+        19,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100-->
     <figure>
@@ -7184,112 +7181,114 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/OUTSMARTING-REALITY-Nero-Knowledge/dp/1068486015/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=UF86XR2BY7FD&dib=eyJ2IjoiMSJ9.LxJS2yARxf2YwaplAxIN87NOkeE-6AScYpM3xf0Ur6rg83UCJoyHpOM7RHAHmrp36_xFuikx1nZ1bO-eDGcuIeAP6F8yfJGh-XGjBQPyg7g.H7L4L3lom7PovgVa9khozSNdOOPrwZYq6sNa-VnjYKk&dib_tag=se&keywords=outsmarting+reality&qid=1754667880&sprefix=outsmarting+realit%2Caps%2C77&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/51yvUglJabL._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Nero Knowledge
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Outsmarting Reality
       </figcaption>
       <figcaption>
-        17,90€
+        33,44€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Ne-c%C3%A8de-jamais-David-Goggins/dp/2221281071/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3T7S164CR8DAR&dib=eyJ2IjoiMSJ9.fj2_n8QT2OB1uMzTU2ngjVBwyimC6u2NZQ383wbB3lWsz-n6vnEFRJFLLOpoPxieGc1UIIohnQLa4ibKexcyslZ7mthjt1rXEIaO_twWP5iAsr_itDKBpMmTh9xZ3r4dAPXk9Uxf0m7WEffl1K6b7Q.YO5AqlbLKde3IWgxEZKc9KlIfVbog96jp8v2AMiiB1U&dib_tag=se&keywords=ne+cede+jamais&qid=1754667891&sprefix=ne+cede+jamais%2Caps%2C73&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61P9XmczMIL._SL1255_.jpg" alt="... Mais la vie continue" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        David Goggins
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Ne cède jamais
       </figcaption>
       <figcaption>
-        19,90€
+        21,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/que-vous-napprendrez-jamais-Harvard/dp/2378151217/ref=sr_1_2?crid=1XHF73UKM2992&dib=eyJ2IjoiMSJ9.mdgzVTPfTsVt4dcm7wIyIu0GLyMe6SXJYPwy4nvGBuR--QbIbmE5O7DmIO49z2llcfdREZyk6Y2M3L_plP33HmJfVdhPVdCtbl6j9fPBtg-PVoK8p94x0KF8rXKZMcypB238adkrQAnti-XbMPO8u3dpiRdwlwhXO0U5m7y3765Dd28GP-IHOoSPfROgCXmW.IZQfg69jdfHwhplFk9IEKw0bc6d2czAlwda1Cob1gvI&dib_tag=se&keywords=what+they+dont+teach+you+at+harvard+business+school&qid=1754668221&sprefix=what+they%2Caps%2C100&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/71JhGveyxzL._SL1500_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Mark McCormack
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Ce que vous n'apprendrez jamais
       </figcaption>
       <figcaption>
-        23,56€
+        à Harvard
       </figcaption>
-    </figure>-->
+      <figcaption>
+        18,90€
+      </figcaption>
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/What-Teach-Harvard-Business-School/dp/0141046481/ref=sr_1_2?crid=I5KWY92FMENG&dib=eyJ2IjoiMSJ9.cMCfheVDIv7fepx3wZ_2JiMccvgdNsFyHhOMPui6qGUIr6fFx8D3Ayr1cPErw9er9F4DtlQtCqTIWaFVgTZmkvk-fY1NDG1q6WLMD4Y4gQ6Q5QtWI_jdYo9HD7T_KE1v5-xi4gomQ8x2_HrT6g6XpNs_XZadvX-UmW4Puwq_92PVGumiIZBk-Ew2b80e-ZMCUnnhgYkxfyLz2wqywL2gaXaC1tpgj9pRwqpPe7YpgkMGFj8VKXETt0PVIyf6nOK6JFNLZwOjyrA8rbnG1dv4scaMePTvVA3bQu5wYEkgSmw.MHtzGAi2YfFmDlk2qkcycNWcebUliepAcdFTkOWIFeg&dib_tag=se&keywords=what+they+teach+you+at+harvard+business+school&qid=1754668235&sprefix=what+they+teach%2Caps%2C319&sr=8-2" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81elX7I1qFL._SL1500_.jpg" alt="Le grand livre de la boxe" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Philip Delves Broughton
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        What They Teach You at Harvard Business School
       </figcaption>
       <figcaption>
-        35,00€
+        15,69€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Gianni-magnifique-St%C3%A9phanie-Horts/dp/222649894X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36X8S3A34V7QL&dib=eyJ2IjoiMSJ9.4bfdu6B7jYCcKVuYDalf3uzlS_4gyKzp24lYIoCdg5oTlhXl13MCP8rRTMqybN1XxdLBsPPUO7QNZJCtH0AgjHfD6eclRZm3la-5JAeQ1ATkDjNi1OjPz44Guo0-c-RWliG17hsluVa0Zwo-4N8_DQUPLEqhTi_m56SEYwUNXYRvUvF3sFispwYSg9ao9C9Z8k2_NVYmE33wNPy6hREd-bBX9PMAcuASofkEcDduvcuNfPsvLbOQJeXl-Yi40QgiLbXyk8twCOmaCdKlfH-dX5qDIVRXPzy7fJVMVNQjp-o.5uyMMPq5o5pvl0NUCzPAYxfdrRojzm0txvF29o1olDQ&dib_tag=se&keywords=gianni&qid=1754668183&sprefix=gianni%2Caps%2C86&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71CAZ0F7iuL._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Stéphanie des Horts
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Gianni le magnifique
       </figcaption>
       <figcaption>
-        17,90€
+        21,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/FIGHTING-LIFE-HC-Lila-Rose/dp/1400219914/ref=tmm_pap_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.vxYPmoe8XmlTp6NHBO3qoxKhQN_qIDuLd1SReEDyCn6F_1aQ49GudhjU79pFK8SnxU8JDLZLI7scfA5HkOI0xEYl_cLgKGezZOgurxf095MjrbqzMrXHxuHtETkD1fR1ynkGQGp-7Ll9TWX9UUoPgiTAUGYAOFBkwUaU9gMXAAPny8i56vl22SRzasXxcqOFI3R_xyvdvK5vU-v1ANEO2KLYVkaWc6zqalHFfrlyloMakAauayzwHg0LYCgAk2mXm7GCiXcdcflMw-nIkPLLLxRPveRPs5PPZeJ10AJoFg4.qeLCeL3ifmXvnz7oCbcEYoLShDiZeOhLugwsnLsNcd4&qid=1754668128&sr=8-2"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71snEsz3VKL._SL1500_.jpg" alt="... Mais la vie continue" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Lila Rose
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Fighting for Life
       </figcaption>
       <figcaption>
-        19,90€
+        17,17€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Sincerely-Stoneheart-Unmask-Enemys-Truth/dp/1400249724/ref=sr_1_1?crid=P8ET2B0QXMPU&dib=eyJ2IjoiMSJ9.bZFfwKnR0wsPFpYV8fiJQS95ScFr14nf12N1hwqOcnayN4cJed3brMDnNGlqIt-KoHKIwgvceEAzoaD45oleZJYA69UWrBIMX9N9TEpESIk.5q0eEvvx-sxUZ5dggTwz_DDYsEnJv7jtGbc5l02lwlk&dib_tag=se&keywords=sincerely+stoneheart&qid=1754668142&sprefix=sincerely+%2Caps%2C82&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/812Yfd5yy9L._SL1500_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Emily Wilson Hussem
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Sincerely, Stoneheart
       </figcaption>
       <figcaption>
-        23,56€
+        18,21€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
