--- a/autres.html
+++ b/autres.html
@@ -36,7 +36,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 2-->
+    <!--Autres 2
     <figure>
       <a href="https://www.amazon.fr/PlayStation-Death-Stranding-Aventure-Physique/dp/B0F194FJTD" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/81vphzNTvvL._AC_SL1500_.jpg" alt="Tumblr Gotaga" class="others" /></a>
@@ -46,7 +46,7 @@
       <figcaption>
         64,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 3
     <figure>
