--- a/livres.html
+++ b/livres.html
@@ -7101,8 +7101,8 @@
 
     <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/Caf%C3%A9-au-revoir-Toshikazu-Kawaguchi/dp/222648597X?crid=3I93CDHE1QA1X&dib=eyJ2IjoiMSJ9.hoYzWcHht2Hws3CxgM661cpg1wiT-kiCLGYdh5xMl_zI1OleQjv9Kg_fVZH9X8cSeektjGAIQRHvGbSQoyinnVRk4mjZAeyTad71r3LdzJQ41soaDMO6XzNpnJpcNOrQhx4KZ1aVVm0EU38CYGirBIRdNsVDxxTMwyVLjX36aZivEaYsoM4kOCtOrrShXTdtT4zrhwPdHYhcO9xb1dvTR5J3Cj8lD_nsje-vFW9yFC1vRhQlxa6LOfveaYyRh4LcKryQ4hO9g-aJg69YOUz34yrI_k7FmLqHdpaQKOjh9h4.RwzY6RfAM4qzRQMQHRwZubcoDA9WDpm-CU-hNJWhino&dib_tag=se&keywords=le+caf%C3%A9+des+au+revoir&qid=1749890912&sprefix=le+caf%C3%A9+des+%2Caps%2C98&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/81fAJd8wkWL._SL1500_.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Caf%C3%A9-au-revoir-Toshikazu-Kawaguchi/dp/2253256765/ref=sr_1_3?crid=1KMH5C4K5L24V&dib=eyJ2IjoiMSJ9.2UfRpbEaub6kxV_vjInenoUMiljgoUHRaDqFRfco_BvLAhRZBDkeZwHr4cDDOVo0ff2ZF7rl7bSxUZCqV7L9Mnarfi1ZKUWxKKRvKsag7RPxDK6Nj0r43wUwuHj2VIZcDIdQhoaacTZ83dA7WLVCQBysyQ7T8dDXhPXR3aA6n1CVOnnuMrfy8YHDuSMF4Icp37QsLAHONW6FoC-o3_dBpg.YAYtpbXDfTV-5mnU24VVOg-jyt-2OcZH4NE0j-p0zug&dib_tag=se&keywords=le+caf%C3%A9+du+temps+retrouv%C3%A9&qid=1758718284&sprefix=le+caf%C3%A9%2Caps%2C151&sr=8-3" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71gDRVaOF2L._SL1500_.jpg" alt="Le grand livre de la boxe" class="books" /></a>
       <figcaption>
         Toshikazu Kawaguchi
       </figcaption>
@@ -7110,7 +7110,7 @@
         Le Café des au revoir
       </figcaption>
       <figcaption>
-        19,90€
+        8,40€
       </figcaption>
     </figure>
   </div>
@@ -7290,114 +7290,114 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/tu%C3%A9-Huey-Long-Jean-Marie-Pottier/dp/226408569X/ref=sr_1_1?crid=DWBA9KT3KFS4&dib=eyJ2IjoiMSJ9.5PtFkQz13BpWOIBNXQspCA._h0f4lJu4GaSHjPGgJAeau5o52h5Pph9TJ2-VPg6zFQ&dib_tag=se&keywords=on+a+tu%C3%A9+huey+long&qid=1758718277&sprefix=on+a+tu%C3%A9%2Caps%2C124&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/716wfGtZZZL._SL1311_.jpg" alt="Le grand livre de la boxe" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Jean-Marie Pottier
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        On a tué Huey Long !
       </figcaption>
       <figcaption>
-        35,00€
+        8,30€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/fugue-sanglante-Charlie-Cohen/dp/2264085924/ref=pd_bxgy_thbs_d_sccl_1/257-0312289-7580746?pd_rd_w=XXHRi&content-id=amzn1.sym.6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_p=6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_r=WPW28P1DHK8XB320GFDR&pd_rd_wg=eTWPT&pd_rd_r=650460d2-9b54-4c7e-a812-f779bd390ab5&pd_rd_i=2264085924&psc=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71j4S3wi9kL._SL1311_.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        David A. Cassan
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        La fugue sanglante de Charlie Cohen
       </figcaption>
       <figcaption>
-        17,90€
+        8,30€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Jur%C3%A9-crach%C3%A9-%C3%89ric-Dupond-Moretti/dp/2749961904/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3CI2Z9QJ8J5TI&dib=eyJ2IjoiMSJ9.5__YdVQrSiwXhVVU_1bj3C6hUJmU3jghTqLoVbLO9iOnp-ePQ9GTq1Wll7d0ok7m6brEyIWjTip65j7sPxj1Re3LRrYiSHOm-Kj9D6nFaHbz9NxRcOe7rHwh8a9gtLKZ4nhs50Br1kERSboYTFJlhDDCSWBEI3UMOyJTab-SIYD_Y-LJCCePBG44zciKKTzP5XypSzw5Ih3tvbxrE-PcYdeMR-5-WGnXvVsbMCANH3JjGdEMZ4ZFz3pTuwUqWgA3nJ-GR6YHxgFCVl3NRH9TnUDL5kxt2npc9kOu79reM7w.5yFqbw5BKKg-stZ725aH3WovJQ6Z033mSFK8jvWx_-Y&dib_tag=se&keywords=jur%C3%A9+crach%C3%A9&qid=1758718269&sprefix=jur%C3%A9+crach%2Caps%2C90&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61l2hEMQARL._SL1285_.jpg" alt="... Mais la vie continue" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Éric Dupond-Moretti
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Juré, craché
+      </figcaption>
+      <figcaption>
+        21,95€
+      </figcaption>
+    </figure>
+
+    <!--Livre 99-->
+    <figure>
+      <a href="https://www.amazon.fr/Limposture-Warren-dossier-derri%C3%A8re-Conjuring/dp/2501190238/ref=sr_1_1?crid=1MARLDTRAND09&dib=eyJ2IjoiMSJ9.6l2cF4ph86bBqhBrtH-InM6x1t_Jth2BTas1w7kx02Hhq24AB9Xn0dt28IYhJWh9T1hN06Ct1WTvWoepQni7KA.3Ay5aMFfn_a_x-92ZW-Slqmq2cvminGssJ6CDY4k0Ls&dib_tag=se&keywords=l%27imposture+warren&qid=1758718258&sprefix=l%27imposture+wa%2Caps%2C99&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71xGenuBtcL._SL1500_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <figcaption>
+        Occulture
+      </figcaption>
+      <figcaption>
+        L'imposture Warren
       </figcaption>
       <figcaption>
         19,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Sarah-Flavia-Piccinni/dp/8860446686/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2CY82D0JQ58E6&dib=eyJ2IjoiMSJ9.58QQ1ERPCwr0Mm68crYtF8L6P1Em_AHajBSquJZAfLYyB_btabZoA3b0WEoGZcwd4OFSaA9E9mAJ7JOb4MItdRl-fDJgeIEyM0-F3fR73AlUfHL0kJQuPRTN9WuhISwSgI8wvUqHJcPZX1_-XNRv7omo70zcUvc9TzB4Yj7lHT-Ire1EYrEMVpV16YTwb24N9rpjka6ZowyQNq5iUXk2nnL6u7csBet2O68slJFgZ7LMqPRWp6SMBdJ6QmnCWXtfllpKv19BMFj9LjY_-AupAA.mBt2MEyCQcLdFsqtAFvxUGdjId-GV5B765wAeLGLPfs&dib_tag=se&keywords=flavia+piccinni&qid=1758562000&sprefix=flavia+piccinni%2Caps%2C69&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71n7WX7NBQL._SL1499_.jpg" alt="Le grand livre de la boxe" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Flavia Piccinni
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Sarah. La ragazza di Avetrana
       </figcaption>
       <figcaption>
-        23,56€
+        18,00€
       </figcaption>
-    </figure>-->
-
-    <!--Livre 100
-    <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
-      <figcaption>
-        Jean-Phillipe Lustyk
-      </figcaption>
-      <figcaption>
-        Le grand livre de la boxe
-      </figcaption>
-      <figcaption>
-        35,00€
-      </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Pierre-B%C3%A9nichou-une-figure-style/dp/2268111644/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=D905K6O8OMP8&dib=eyJ2IjoiMSJ9.EzCjAcG37ipyy3XnZqHFAL7Dx6AmAbIPjtEREY50SFGtSl2ixEy4jvfrcXJkHPi1D8Njm_bpnMAbNG_IGsDMK2CEZZ97a4wcgoxipZnDnhagMHOQQSG4ybao5J__Acdp5woNa1323KDgPCZTcQsftJxL02quSEYC_lPfdfzoJnIi2zQNkolMZexfrJcWKd16csdmHrnM-MwUKkBIvkeSB8NgDMHpEs2WY9X123S1hSkw1Mlx97SWInjUO1wXr5pR72cXYTgLTf6F55vqQ2kvB8s3Mbm7_zhWTMOUC8c9xOU.koUuGuF1F0hjoAwYX-RYDsDs4n-KoPzowCA27xlxUiw&dib_tag=se&keywords=pierre+benichou&qid=1758718383&sprefix=pierre+benichou%2Caps%2C83&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71Buko+n3FL._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Benjamin Puech
       </figcaption>
       <figcaption>
-        Derrière la porte verte
-      </figcaption>
-      <figcaption>
-        17,90€
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 98
-    <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
-      <figcaption>
-        Bernard Pivot
-      </figcaption>
-      <figcaption>
-        ... Mais la vie continue
+        Pierre Bénichou, une figure de style
       </figcaption>
       <figcaption>
         19,90€
       </figcaption>
-    </figure>-->
+    </figure>
+
+    <!--Livre 98-->
+    <figure>
+      <a href="https://www.amazon.fr/lenfer-paradis-secrets-lhistoire-2023-2025/dp/2080488295/ref=sr_1_1?crid=J2ZG7SG5KZUC&dib=eyJ2IjoiMSJ9.6K8bLFgGHxTSdBM5XV893Zogk4X-CG8BzbrS62pOQ8PGjHj071QN20LucGBJIEps.v9Oyglx0EHq0WkZl4g7xMjgSJ3bHaagT72O7TRgggfA&dib_tag=se&keywords=de+l%27enfer+au+paradis+psg&qid=1758718335&sprefix=de+l%27enfer+au+pa%2Caps%2C99&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61GWXQU55+L._SL1299_.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <figcaption>
+        Fabrice Hawkins
+      </figcaption>
+      <figcaption>
+        De l'enfer au paradis
+      </figcaption>
+      <figcaption>
+        20,90€
+      </figcaption>
+    </figure>
 
     <!--Livre 99
     <figure>
