--- a/religion.html
+++ b/religion.html
@@ -21,20 +21,20 @@
   </navbar>
 
   <div class="gamesLine">
-    <!--Jeu 1
+    <!--Jeu 1--->
     <figure>
-      <a href="https://www.amazon.fr/Rosaire-selon-Jean-Paul-Avec-myst%C3%A8res/dp/8820974460/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2T6NKQI3IDMK7&dib=eyJ2IjoiMSJ9.WPltdL0t6qxuor0EuNxELh_RAV-3df2c_aS9FXpSofWqGI1dr0v9DOchwQxL9YjjhYGVKOB55Dl7soPknOAPcQHXUtEDHa59eH74uvV1i3QRBdCXZrmwzELW9pzmUeRHeeVglj_tp-5xPYpl8Y8ef-umx7sXdb5u7j9g3Qa5PI4KaGsnFfbwIXAs1KrKA3Nu8ia_1loRFIjoI_cXZpBwHI9NJsvKrDQRU5kEwACVn9XHLkxLgCb0zqQNO5XakToN_dfMtmrQ7e0lHw7ZVeo3wYcoA3WmoqZBywyIRMjb80g.3FTtijFLqu8ekyLuG5_gljStyWa8i16AJsDpxANhoww&dib_tag=se&keywords=jean+paul+II+rosaire&qid=1728308492&sprefix=jean+paul+ii+rosaire%2Caps%2C84&sr=8-3"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/51NXteD1LtL.jpg" alt="Le Rosaire" class="books" /></a>
+      <a href="https://www.amazon.fr/Cons%C3%A9cration-saint-Joseph-merveilles-Spirituel/dp/284863216X/ref=sr_1_1?crid=UMMU8MXEDVXR&dib=eyJ2IjoiMSJ9.eKkMlqRKR0y--vsja_3wiARcOaKGS_owPeNKOyWmB5-6WtEIgbz4NJYCtaIke5Yo7tb4EkKYnKnLpDbseQGa0b6_KRkk4IINfVqiAptr9gyFIbwOUmBap8K3933fI0950pCkChTuOpuJOBfDF6FUmx2rz5PF3RD6FDq1evn4gNFmh1YGYsB0DC7ePudFJEQY8uWgi0Lfnq6SZN6opoeDST5rrd7u6AleImd7LT7mJqXzfZGPVufrOAZaEYseUzBcytSZpaH6XnNF8Fh0cwjRBSQCK_PxjjbyDOVsewuqbpQ.M3PWfTIIP3gQVwK_AAp-Ct2GQsB0usdi9nalzQ491xU&dib_tag=se&keywords=cons%C3%A9cration+de+saint+joseph&qid=1758718245&sprefix=Cons%C3%A9cra%2Caps%2C107&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/6100NIKM5LL.jpg" alt="Le Rosaire" class="books" /></a>
       <figcaption>
-        Jean Paul II
+        Père Calloway
       </figcaption>
       <figcaption>
-        Le Rosaire
+        Consécration à saint Joseph
       </figcaption>
       <figcaption>
-        3,00€
+        21,00€
       </figcaption>
-    </figure>--->
+    </figure>
 
     <!--Jeu 2--->
     <figure>
