--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 08 août 2025
+    Mise à jour liste le 24 septembre 2025
   </p>
   <p class="dateMAJ2">
     Mise à jour prix le 04 mars 2025
