--- a/livres.html
+++ b/livres.html
@@ -7196,7 +7196,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Ne-c%C3%A8de-jamais-David-Goggins/dp/2221281071/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3T7S164CR8DAR&dib=eyJ2IjoiMSJ9.fj2_n8QT2OB1uMzTU2ngjVBwyimC6u2NZQ383wbB3lWsz-n6vnEFRJFLLOpoPxieGc1UIIohnQLa4ibKexcyslZ7mthjt1rXEIaO_twWP5iAsr_itDKBpMmTh9xZ3r4dAPXk9Uxf0m7WEffl1K6b7Q.YO5AqlbLKde3IWgxEZKc9KlIfVbog96jp8v2AMiiB1U&dib_tag=se&keywords=ne+cede+jamais&qid=1754667891&sprefix=ne+cede+jamais%2Caps%2C73&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/61P9XmczMIL._SL1255_.jpg" alt="... Mais la vie continue" class="books" /></a>
@@ -7209,7 +7209,7 @@
       <figcaption>
         21,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
@@ -7245,7 +7245,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Gianni-magnifique-St%C3%A9phanie-Horts/dp/222649894X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36X8S3A34V7QL&dib=eyJ2IjoiMSJ9.4bfdu6B7jYCcKVuYDalf3uzlS_4gyKzp24lYIoCdg5oTlhXl13MCP8rRTMqybN1XxdLBsPPUO7QNZJCtH0AgjHfD6eclRZm3la-5JAeQ1ATkDjNi1OjPz44Guo0-c-RWliG17hsluVa0Zwo-4N8_DQUPLEqhTi_m56SEYwUNXYRvUvF3sFispwYSg9ao9C9Z8k2_NVYmE33wNPy6hREd-bBX9PMAcuASofkEcDduvcuNfPsvLbOQJeXl-Yi40QgiLbXyk8twCOmaCdKlfH-dX5qDIVRXPzy7fJVMVNQjp-o.5uyMMPq5o5pvl0NUCzPAYxfdrRojzm0txvF29o1olDQ&dib_tag=se&keywords=gianni&qid=1754668183&sprefix=gianni%2Caps%2C86&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/71CAZ0F7iuL._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
@@ -7258,7 +7258,7 @@
       <figcaption>
         21,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
